[package]
name = "photobot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clappers = "2.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
globset = "0.4.9"
adler32 = "1.2.0"
clap = { version = "4.0.26", features = ["derive"] }
walkdir = "2.3.2"
anyhow = "1.0.66"
once_cell = "1.16.0"
pickledb = "0.5.1"
